--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +7,7 @@
     tools:context=".Activity.SettingActivity"
     android:background="@color/colorPrimary">
     <LinearLayout
+        android:id="@+id/root_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -28,191 +29,5 @@
                 android:textStyle="bold">
             </TextView>
         </androidx.appcompat.widget.Toolbar>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/bottom_border"
-                android:paddingLeft="39dp"
-                android:text="알림"
-                android:textSize="20dp"
-                android:textColor="@color/colorNormal"
-                android:gravity="center_vertical"
-                android:fontFamily="@font/nanumgothic_font_family"
-                android:textStyle="bold"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/bottom_border_gray"
-                android:orientation="vertical">
-                <Switch
-                    android:id="@+id/switch_push"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:paddingRight="39dp"
-                    android:paddingLeft="39dp"
-                    android:text="푸시알림"
-                    android:textSize="14dp"
-                    android:textColor="@color/colorNormal"
-                    android:fontFamily="@font/nanumgothic_font_family">
-                </Switch>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/bottom_border_gray"
-                android:orientation="vertical">
-                <Switch
-                    android:id="@+id/switch_chatting"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:paddingRight="39dp"
-                    android:paddingLeft="39dp"
-                    android:text="채팅알림"
-                    android:textSize="14dp"
-                    android:textColor="@color/colorNormal"
-                    android:fontFamily="@font/nanumgothic_font_family">
-                </Switch>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/bottom_border_gray"
-                android:orientation="vertical">
-                <Button
-                    android:id="@+id/btn_view_notification"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:paddingRight="39dp"
-                    android:paddingLeft="39dp"
-                    android:text="공지사항"
-                    android:gravity="left|center_vertical"
-                    android:textSize="14dp"
-                    android:textColor="@color/colorNormal"
-                    android:background="?android:selectableItemBackground"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:fontFamily="@font/nanumgothic_font_family"/>
-            </LinearLayout>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/bottom_border"
-                android:paddingLeft="39dp"
-                android:text="정보"
-                android:textSize="20dp"
-                android:textColor="@color/colorNormal"
-                android:gravity="center_vertical"
-                android:fontFamily="@font/nanumgothic_font_family"
-                android:textStyle="bold"/>
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/bottom_border_gray"
-                android:orientation="vertical">
-                <Button
-                    android:id="@+id/btn_app_version"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:paddingRight="39dp"
-                    android:paddingLeft="39dp"
-                    android:text="앱 버전"
-                    android:gravity="left|center_vertical"
-                    android:textSize="14dp"
-                    android:textColor="@color/colorNormal"
-                    android:background="?android:selectableItemBackground"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:fontFamily="@font/nanumgothic_font_family"/>
-                <TextView
-                    android:id="@+id/tv_version"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right|center_vertical"
-                    android:text="1.0.0"
-                    android:textColor="@color/colorPoint"
-                    android:layout_marginRight="39dp"
-                    android:textSize="14dp"
-                    android:fontFamily="@font/nanumgothic_font_family"
-                    />
-            </FrameLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/bottom_border_gray"
-                android:orientation="vertical">
-                <Button
-                    android:id="@+id/btn_view_private"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:paddingRight="39dp"
-                    android:paddingLeft="39dp"
-                    android:text="개인정보 취급방침"
-                    android:gravity="left|center_vertical"
-                    android:textSize="14dp"
-                    android:textColor="@color/colorNormal"
-                    android:background="?android:selectableItemBackground"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:fontFamily="@font/nanumgothic_font_family"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/bottom_border_gray"
-                android:orientation="vertical">
-                <Button
-                    android:id="@+id/btn_view_using"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:paddingRight="39dp"
-                    android:paddingLeft="39dp"
-                    android:text="서비스 이용약관"
-                    android:gravity="left|center_vertical"
-                    android:textSize="14dp"
-                    android:textColor="@color/colorNormal"
-                    android:background="?android:selectableItemBackground"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:fontFamily="@font/nanumgothic_font_family"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/bottom_border_gray"
-                android:orientation="vertical">
-                <Button
-                    android:id="@+id/btn_logout"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:paddingRight="39dp"
-                    android:paddingLeft="39dp"
-                    android:text="로그아웃"
-                    android:gravity="left|center_vertical"
-                    android:textSize="14dp"
-                    android:textColor="@color/colorNormal"
-                    android:background="?android:selectableItemBackground"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:fontFamily="@font/nanumgothic_font_family"/>
-            </LinearLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <Button
-                    android:id="@+id/btn_withdrawal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="53dp"
-                    android:fontFamily="@font/nanumgothic_font_family"
-                    android:text="야미구 탈퇴"
-                    android:textColor="@color/colorPoint"
-                    android:textSize="13dp"
-                    android:background="?android:selectableItemBackground"/>
-            </RelativeLayout>
         </LinearLayout>
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
